<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BlocNotesActivity">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E5E5"
        android:id="@+id/constraintlayout"
        tools:context="com.khadija.makhchoun.lifemanager.BlocNotesActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_toStartOf
                    ="@+id/Username_img"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_toLeftOf="@+id/Username_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Username"
                android:textColor="@color/primaire1"
                android:text="BLOC NOTES "
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textSize="30sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Username_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="1dp"
                android:layout_alignParentRight="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Username_img"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/search_your_note_here"
                    android:autofillHints="@string/search_your_note_here"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingTop="6dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="6dp"
                    android:inputType="text"/>

                <ImageView
                    android:id="@+id/search_btn"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:padding="7dp"
                    android:onClick="searchData"
                    app:srcCompat="@drawable/ic_baseline_search_24"
                    android:contentDescription="@string/usr_img"
                    tools:ignore="OnClick,VectorDrawableCompat"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/empty"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recyclerview"
            app:layout_constraintStart_toStartOf="@+id/recyclerview"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="75dp"
            android:contentDescription="@string/create_note"
            app:backgroundTint="@color/primaire2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:background="@drawable/bgaddnew"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/primaire1"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/bottommenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
